Fix contrast issues with `code` element
As a result of the recent palatte changes it has meant that the code
element contrast was relatively low and failed WCAG AA.

--- a/src/stylesheets/main.scss
+++ b/src/stylesheets/main.scss
@@ -4,7 +4,7 @@ $govuk-page-width: 1100px !default;
 
 // App-specific variables
 $app-light-grey: #f8f8f8;
-$app-code-color: #dd1144;
+$app-code-color: #c62950;
 
 // App-specific components
 @import "components/back-to-top";
